docker: allow building foreign-architecture images using static qemu builds.
Thanks to
 https://ownyourbits.com/2018/06/27/running-and-building-arm-docker-containers-in-x86/
for describing the setup.

--- a/docker/Dockerfile.in
+++ b/docker/Dockerfile.in
@@ -2,6 +2,8 @@ FROM @ARCH@/@DISTRO_IMAGE@
 
 LABEL maintainer="Philipp Kutin <philipp.kutin@gmail.com>"
 
+#@if-foreign:COPY /qemu-@qemu-suffix@ /usr/local/bin
+
 @DO_update_packages@
 
 # Common:
