--- a/docker/Dockerfile.in
+++ b/docker/Dockerfile.in
@@ -18,6 +18,8 @@ WORKDIR /home/user
 
 ########## Check out, build and install LuaJIT 2.1 ##########
 
+# Make sure that a fast-forward re-clones the repo:
+RUN echo @LUAJIT_GIT_HASH@
 RUN git clone https://github.com/LuaJIT/LuaJIT.git \
     --single-branch --branch=v2.1 --shallow-since=2020-08-01 \
     ./luajit-2.1
