--- a/dev/app-prefix.sh.in
+++ b/dev/app-prefix.sh.in
@@ -5,4 +5,4 @@ export LD_LIBRARY_PATH="@LLVM_LIBDIR@:$d"
 export LLVM_BINDIR="@LLVM_BINDIR@"
 
 # CAUTION: the quotes here are crucial!
-luajit - "$@" <<"EOF________________________________________________________________________________"
+exec luajit - "$@" <<"EOF________________________________________________________________________________"
